# PrintStruct

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-change-request.md  feature-request.md
.github/workflows/: continuous_integration.yml  pr_review_notice.yml  workflow.yml
gitree/: __init__.py  main.py
gitree/objects/: config.py
gitree/services/: basic_args_handling_service.py  draw_tree.py  general_options_service.py  interactive.py  list_enteries.py  output_formatters.py  parser.py  parsing_service.py  zip_project.py
gitree/utilities/: config.py  utils.py
printstruct/: main.py
printstruct/services/: draw_tree.py  parser.py
services/: draw_tree.py  list_enteries.py  parser.py  zip_project.py
tests/: base_setup.py  test_basic.py  test_general_options.py  test_io_flags  test_io_flags.py  test_listing_flags.py
