[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PrintStruct"
version = "1.2.1"
description = "PrintStruct: print project structure and optionally zip it"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Shahzaib Ahmad" }]

[project.scripts]
prst = "main:main"

[tool.setuptools]
py-modules = ["main"]
